# Naval_battle_project

./: .gitignore  Client.h  Controller.cpp  Controller.h  Images.cpp  Images.h  README.md  Server.h  botwindow.cpp  botwindow.h  botwindow.ui  client.cpp  finalwindow.cpp  finalwindow.h  finalwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui  naval_battle.pro  project_try_2.pro  res.qrc  server.cpp
include/: Board.h  Controller.h  Player.h
project/: CMakeLists.txt
project/include/: Board.h  Bot.h  Controller.h  Interface.h  Player.h  ShipPlacement.h
project/src/: Board.cpp  Bot.cpp  Controller.cpp  Interface.cpp  Player.cpp  main.cpp
qt/build-untitled-Desktop_Qt_5_14_1_GCC_64bit-Debug/: Makefile  moc_SignalHelper.cpp  moc_mainwindow.cpp  project  qrc_res.cpp  ui_mainwindow.h  untitled
qt/client/: Controller.cpp  Controller.h  InfoDialog.cpp  InfoDialog.h  Model.h  client.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_2.ui  res.qrc
qt/server/: Client.cpp  Client.h  Server.h  main.cpp  server.cpp  server.pro
qt/untitled/: Controller.cpp  Controller.h  Defines.h  Images.cpp  Images.h  SignalHelper.h  Utility.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_2.ui  project  untitled.pro
src/: Board.cpp  Controller.cpp  Player.cpp
test/: CMakeLists.txt  Test_Board.h  Test_Player.h  Test_ShipPlacement.h  Test_main.cpp
test/include/: Board.h  Controller.h  Player.h  ShipPlacement.h
test/src/: Board.cpp
test/test/: test.cpp
